--- a/style.css
+++ b/style.css
@@ -230,7 +230,7 @@ button{
         gap: 24px;
     }
 
-    &{
+    & h2{
         font-size: 64px;
     }
 
@@ -253,8 +253,8 @@ button{
             font-weight: 600;
             color: white;
         }
-    }
 
+    }
 }
 
 .copyright{
@@ -264,3 +264,118 @@ button{
 }
 
 
+@media (max-device-width:767px) {
+    .container{
+        padding: 16px;
+        margin: 0% auto;
+    }
+    
+    .between{
+        gap: 5rem;
+        grid-template-columns: repeat(1, minmax(0 , 1fr));
+    }
+     
+    .banner-section{
+        padding: 50px 16px;
+        margin-left: 20px;
+        
+        & h1{
+            font-size: 40px;
+            font-weight: 600;
+            color: #0b0736;
+        }
+    
+        & div{
+            padding: 16px 0;
+ 
+            font-size: 20px;
+        }
+    }
+
+    .track-section{
+ 
+        .bg-track{
+            top: 0%;
+            left: 0%;
+            width: 100%;
+        }
+    
+        .left-section{
+            & h2{
+                font-size: 40px;
+            }
+            .image-grid{
+                padding-top: 40px;
+                padding-left: 40px ;
+                gap: 16px;
+    
+                & div{
+                    width: 130px;
+                    gap: 16px;
+                }
+    
+ 
+            }
+        }
+
+        .right-section{
+            h3{
+                font-size: 24px;
+                padding-right:0rem ;
+            }
+            .details-div{
+                gap: 16px;
+                margin-top: 24px;
+    
+                & div{
+                    padding-top: 16px
+                }
+            }
+        }
+ 
+    }
+
+
+
+    .company{
+        margin-top: 50px;
+
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+    .join{
+        margin: 60px auto;
+        border-radius: 24px;
+        grid-template-columns: repeat(1 , minmax(0,1fr));
+    
+        .details{
+            margin:16px;
+        }
+    
+        & h2{
+            font-size: 35px;
+        }
+    
+        .store-design{
+            gap: 12px;
+            padding: 16px 24px;
+            border-radius: 14px;
+ 
+            & h3{
+                font-size: 15px;
+            }
+
+ 
+       
+ 
+       }
+     .to{
+            width: 100%;
+            height: 100%;
+        }
+}
+
+}
